documentation(endpoint triggerEmailToConfirm): endpoint documented
