# storage/api-docs/api-docs.json
@@ -261,6 +261,131 @@
                     }
                 }
             }
+        },
+        "/api/trigger-email-to-confirm": {
+            "post": {
+                "tags": [
+                    "Autenticação"
+                ],
+                "summary": "Enviar código de verificação pro email",
+                "description": "Envia um código de verificação para o email para ele confirmar o email",
+                "operationId": "85af8f2a0b657264023f311a63e84bde",
+                "responses": {
+                    "401": {
+                        "description": "O e-mail já foi confirmado",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "code": {
+                                            "description": "Código HTTP",
+                                            "type": "integer"
+                                        },
+                                        "message": {
+                                            "description": "Mensagem de erro",
+                                            "type": "string"
+                                        }
+                                    },
+                                    "type": "object",
+                                    "example": {
+                                        "code": 401,
+                                        "message": "O e-mail já foi confirmado!"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "200": {
+                        "description": "E-mail enviado com sucesso!",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "code": {
+                                            "description": "Código HTTP",
+                                            "type": "integer"
+                                        },
+                                        "message": {
+                                            "description": "Mensagem de sucesso",
+                                            "type": "string"
+                                        }
+                                    },
+                                    "type": "object",
+                                    "example": {
+                                        "code": 200,
+                                        "message": "O e-mail com o código foi enviado com sucesso!"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "498": {
+                        "description": "Token inválido",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "code": {
+                                            "description": "Código HTTP",
+                                            "type": "integer"
+                                        },
+                                        "message": {
+                                            "description": "Mensagem de sucesso",
+                                            "type": "string"
+                                        }
+                                    },
+                                    "type": "object",
+                                    "example": {
+                                        "code": 498,
+                                        "message": "Token inválido!"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Usuário não encontrado",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "code": {
+                                            "description": "Código HTTP",
+                                            "type": "integer"
+                                        },
+                                        "message": {
+                                            "description": "Mensagem de sucesso",
+                                            "type": "string"
+                                        }
+                                    },
+                                    "type": "object",
+                                    "example": {
+                                        "code": 404,
+                                        "message": "Usuário não encontrado!"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ]
+            }
+        }
+    },
+    "components": {
+        "securitySchemes": {
+            "BearerAuth": {
+                "type": "http",
+                "description": "Paramêtro obrigatório para identificar se o usuário está autenticado",
+                "name": "Authorization",
+                "in": "header",
+                "bearerFormat": "JWT",
+                "scheme": "bearer"
+            }
         }
     },
     "tags": [
